Fixed extra margins appearing on hover, added margin to hover expansion so everything lines up perfectly, resolved new bug from queued/playing songs after the move from CSS3 columns to full JS column implementation. Some code cleanup for player.js

--- a/css/style.scss
+++ b/css/style.scss
@@ -104,8 +104,8 @@ ol {
     background-color: $lightest-grey;
     width: 200px;
     height: 40px;
-    display: inline-block;
-    margin: 5px;
+    display: block;
+    margin: 5px 2px;
     a {
       padding: 10px 15px 0px;
       display: block;
